// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmplifyDeployStep can be added as post-deployment step to CDK Pipeline 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
  pull_request:
    branches:
      - main
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      pull-requests: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
        with:
          fetch-depth: 0
      - run: yarn install --check-files --frozen-lockfile
      - run: npx projen build
      - run: count-resources --cloud-assembly-dir cdk.out --warning-threshold 450 --resource-limit 500 --output-file resource-count-results.json --github-summary
      - name: Upload Artifact
        uses: actions/upload-artifact@v7
        with:
          name: cloud-assembly
          path: cdk.out/
      - name: Download baseline resource counts
        if: github.event_name == 'pull_request'
        uses: actions/checkout@v6
        with:
          ref: \${{ github.event.pull_request.base.ref }}
          path: __baseline
          sparse-checkout: resource-count-results.json
          sparse-checkout-cone-mode: false
      - name: Post PR comment with resource counts
        if: github.event_name == 'pull_request'
        uses: actions/github-script@v7
        with:
          script: |-
            const fs = require('fs');
            const resultsPath = 'resource-count-results.json';
            const baselinePath = '__baseline/resource-count-results.json';
            if (!fs.existsSync(resultsPath)) { console.log('No resource count results found'); return; }
            const results = JSON.parse(fs.readFileSync(resultsPath, 'utf8'));
            let baseline = null;
            try { if (fs.existsSync(baselinePath)) { baseline = JSON.parse(fs.readFileSync(baselinePath, 'utf8')); } } catch (e) { console.log('No baseline found'); }
            const baselineMap = {};
            if (baseline && baseline.stacks) { for (const s of baseline.stacks) { baselineMap[s.stackName] = s.resourceCount; } }
            let body = '## CloudFormation Resource Count\\n\\n';
            body += '| Stack | Resources | Limit | Usage | Delta | Status |\\n';
            body += '| --- | --- | --- | --- | --- | --- |\\n';
            for (const stack of results.stacks) {
              const prev = baselineMap[stack.stackName];
              const delta = prev !== undefined ? stack.resourceCount - prev : null;
              const deltaStr = delta !== null ? (delta > 0 ? \`+\${delta}\` : \`\${delta}\`) : 'N/A';
              const status = stack.exceeded ? '🔴 Exceeded' : stack.warning ? '🟡 Warning' : '🟢 OK';
              body += \`| \${stack.stackName} | \${stack.resourceCount} | \${stack.resourceLimit} | \${stack.percentUsed}% | \${deltaStr} | \${status} |\\n\`;
            }
            if (results.hasExceeded) { body += '\\n> **Error:** One or more stacks exceed the resource limit!\\n'; }
            else if (results.hasWarnings) { body += '\\n> **Warning:** One or more stacks are approaching the resource limit.\\n'; }
            const { data: comments } = await github.rest.issues.listComments({ owner: context.repo.owner, repo: context.repo.repo, issue_number: context.issue.number });
            const marker = '<!-- resource-count-comment -->';
            body = marker + '\\n' + body;
            const existing = comments.find(c => c.body && c.body.includes(marker));
            if (existing) { await github.rest.issues.updateComment({ owner: context.repo.owner, repo: context.repo.repo, comment_id: existing.id, body }); }
            else { await github.rest.issues.createComment({ owner: context.repo.owner, repo: context.repo.repo, issue_number: context.issue.number, body }); }
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    if: github.event_name != 'pull_request'
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v8
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: yarn install --check-files --frozen-lockfile
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-prod:
    name: Deploy stage prod to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-prod
      cancel-in-progress: false
    env:
      CI: "true"
      AWS_REGION: us-east-1
      AWS_DEFAULT_REGION: us-east-1
    if: github.event_name != 'pull_request'
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
      - name: Download Artifact
        uses: actions/download-artifact@v8
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: yarn install --check-files --frozen-lockfile
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen deploy:prod
      - name: Extract Amplify App ID
        env:
          ENVIRONMENT: prod
        run: AMPLIFY_APP_ID=$(jq -r '.MyStack.AmplifyAppId' cdk-outputs-prod.json) && echo "AMPLIFY_APP_ID=$AMPLIFY_APP_ID" >> $GITHUB_ENV
      - name: Deploy to Amplify
        run: |-
          #!/bin/bash -e
          echo "Checking for pending Amplify jobs..."
          aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name main --max-items 1 > amplify-last-job.json
          AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')
          AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')
          if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then
            aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_LAST_JOB_ID
          fi
          echo "Creating Amplify deployment..."
          aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name main > amplify-deploy.json
          AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')
          AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')
          echo "Uploading deployment artifact..."
          curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file website.zip
          echo "Starting Amplify deployment..."
          aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID
          while :; do
            sleep 10
            STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')
            if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then
              break
            fi
            echo "Deployment status: $STATUS"
          done
          rm -f amplify-last-job.json amplify-deploy.json
          echo "Amplify deployment completed with status: $STATUS"
          if [ "$STATUS" != "SUCCEED" ]; then
            echo "Deployment failed with status: $STATUS"
            exit 1
          fi
      - name: Add CDK outputs to summary - prod
        run: |-
          if [ -f "cdk-outputs-prod.json" ]; then
            echo "## CDK Stack Outputs - prod" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY

            # Check if the file has content
            if [ -s "cdk-outputs-prod.json" ]; then
              # Parse JSON and create a markdown table
              echo "| Stack | Output Key | Output Value |" >> $GITHUB_STEP_SUMMARY
              echo "|-------|------------|--------------|" >> $GITHUB_STEP_SUMMARY

              # Use jq to parse the JSON and format as table rows
              jq -r 'to_entries | .[] | .key as $stack | .value | to_entries | .[] | "| \\($stack) | \\(.key) | \\(.value) |"' "cdk-outputs-prod.json" >> $GITHUB_STEP_SUMMARY

              echo "" >> $GITHUB_STEP_SUMMARY
            else
              echo "No outputs found for this deployment." >> $GITHUB_STEP_SUMMARY
              echo "" >> $GITHUB_STEP_SUMMARY
            fi
          else
            echo "## CDK Stack Outputs - prod" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY
            echo "Outputs file not found: cdk-outputs-prod.json" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY
          fi
      - name: Upload Artifact
        uses: actions/upload-artifact@v7
        with:
          name: cdk-outputs-prod
          path: cdk-outputs-prod.json
"
`;

exports[`AmplifyDeployStep generates correct configuration with command-based app ID extraction 1`] = `
{
  "commands": [
    "export AWS_REGION="eu-central-1"",
    "export AWS_DEFAULT_REGION="eu-central-1"",
    "AMPLIFY_APP_ID=$(jq -r '.MyStack.AmplifyAppId' cdk-outputs-production.json)",
    "echo "Checking for pending Amplify jobs..."",
    "aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name main --max-items 1 > amplify-last-job.json",
    "AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')",
    "AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')",
    "if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then",
    "  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_LAST_JOB_ID",
    "fi",
    "echo "Creating Amplify deployment..."",
    "aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name main > amplify-deploy.json",
    "AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')",
    "AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')",
    "echo "Uploading deployment artifact..."",
    "curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file website.zip",
    "echo "Starting Amplify deployment..."",
    "aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID",
    "while :; do",
    "  sleep 10",
    "  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')",
    "  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then",
    "    break",
    "  fi",
    "  echo "Deployment status: $STATUS"",
    "done",
    "rm -f amplify-last-job.json amplify-deploy.json",
    "echo "Amplify deployment completed with status: $STATUS"",
    "if [ "$STATUS" != "SUCCEED" ]; then",
    "  echo "Deployment failed with status: $STATUS"",
    "  exit 1",
    "fi",
  ],
}
`;

exports[`AmplifyDeployStep generates correct configuration with command-based app ID extraction 2`] = `
{
  "env": {
    "AWS_DEFAULT_REGION": "eu-central-1",
    "AWS_REGION": "eu-central-1",
  },
  "needs": [],
  "steps": [
    {
      "env": {
        "ENVIRONMENT": "production",
      },
      "name": "Extract Amplify App ID",
      "run": "AMPLIFY_APP_ID=$(jq -r '.MyStack.AmplifyAppId' cdk-outputs-production.json) && echo "AMPLIFY_APP_ID=$AMPLIFY_APP_ID" >> $GITHUB_ENV",
    },
    {
      "name": "Deploy to Amplify",
      "run": "#!/bin/bash -e
echo "Checking for pending Amplify jobs..."
aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name main --max-items 1 > amplify-last-job.json
AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')
AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')
if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then
  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_LAST_JOB_ID
fi
echo "Creating Amplify deployment..."
aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name main > amplify-deploy.json
AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')
AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')
echo "Uploading deployment artifact..."
curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file website.zip
echo "Starting Amplify deployment..."
aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID
while :; do
  sleep 10
  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')
  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then
    break
  fi
  echo "Deployment status: $STATUS"
done
rm -f amplify-last-job.json amplify-deploy.json
echo "Amplify deployment completed with status: $STATUS"
if [ "$STATUS" != "SUCCEED" ]; then
  echo "Deployment failed with status: $STATUS"
  exit 1
fi",
    },
  ],
}
`;

exports[`AmplifyDeployStep generates correct configuration with command-based app ID extraction 3`] = `
{
  "commands": [
    "AMPLIFY_APP_ID=$(jq -r '.MyStack.AmplifyAppId' cdk-outputs-production.json)",
    "echo "Checking for pending Amplify jobs..."",
    "aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name main --max-items 1 > amplify-last-job.json",
    "AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')",
    "AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')",
    "if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then",
    "  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_LAST_JOB_ID",
    "fi",
    "echo "Creating Amplify deployment..."",
    "aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name main > amplify-deploy.json",
    "AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')",
    "AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')",
    "echo "Uploading deployment artifact..."",
    "curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file website.zip",
    "echo "Starting Amplify deployment..."",
    "aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID",
    "while :; do",
    "  sleep 10",
    "  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')",
    "  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then",
    "    break",
    "  fi",
    "  echo "Deployment status: $STATUS"",
    "done",
    "rm -f amplify-last-job.json amplify-deploy.json",
    "echo "Amplify deployment completed with status: $STATUS"",
    "if [ "$STATUS" != "SUCCEED" ]; then",
    "  echo "Deployment failed with status: $STATUS"",
    "  exit 1",
    "fi",
  ],
  "env": {
    "AWS_DEFAULT_REGION": "eu-central-1",
    "AWS_REGION": "eu-central-1",
  },
  "extensions": [],
  "needs": [],
}
`;

exports[`AmplifyDeployStep generates correct configuration with custom branch and region 1`] = `
{
  "commands": [
    "export AWS_REGION="us-west-2"",
    "export AWS_DEFAULT_REGION="us-west-2"",
    "AMPLIFY_APP_ID="d123gtgt770s1x"",
    "echo "Checking for pending Amplify jobs..."",
    "aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name develop --max-items 1 > amplify-last-job.json",
    "AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')",
    "AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')",
    "if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then",
    "  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_LAST_JOB_ID",
    "fi",
    "echo "Creating Amplify deployment..."",
    "aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name develop > amplify-deploy.json",
    "AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')",
    "AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')",
    "echo "Uploading deployment artifact..."",
    "curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file build.zip",
    "echo "Starting Amplify deployment..."",
    "aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_JOB_ID",
    "while :; do",
    "  sleep 10",
    "  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')",
    "  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then",
    "    break",
    "  fi",
    "  echo "Deployment status: $STATUS"",
    "done",
    "rm -f amplify-last-job.json amplify-deploy.json",
    "echo "Amplify deployment completed with status: $STATUS"",
    "if [ "$STATUS" != "SUCCEED" ]; then",
    "  echo "Deployment failed with status: $STATUS"",
    "  exit 1",
    "fi",
  ],
}
`;

exports[`AmplifyDeployStep generates correct configuration with custom branch and region 2`] = `
{
  "env": {
    "AWS_DEFAULT_REGION": "us-west-2",
    "AWS_REGION": "us-west-2",
  },
  "needs": [],
  "steps": [
    {
      "name": "Set Amplify App ID",
      "run": "echo "AMPLIFY_APP_ID=d123gtgt770s1x" >> $GITHUB_ENV",
    },
    {
      "name": "Deploy to Amplify",
      "run": "#!/bin/bash -e
echo "Checking for pending Amplify jobs..."
aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name develop --max-items 1 > amplify-last-job.json
AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')
AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')
if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then
  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_LAST_JOB_ID
fi
echo "Creating Amplify deployment..."
aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name develop > amplify-deploy.json
AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')
AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')
echo "Uploading deployment artifact..."
curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file build.zip
echo "Starting Amplify deployment..."
aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_JOB_ID
while :; do
  sleep 10
  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')
  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then
    break
  fi
  echo "Deployment status: $STATUS"
done
rm -f amplify-last-job.json amplify-deploy.json
echo "Amplify deployment completed with status: $STATUS"
if [ "$STATUS" != "SUCCEED" ]; then
  echo "Deployment failed with status: $STATUS"
  exit 1
fi",
    },
  ],
}
`;

exports[`AmplifyDeployStep generates correct configuration with custom branch and region 3`] = `
{
  "commands": [
    "AMPLIFY_APP_ID="d123gtgt770s1x"",
    "echo "Checking for pending Amplify jobs..."",
    "aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name develop --max-items 1 > amplify-last-job.json",
    "AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')",
    "AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')",
    "if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then",
    "  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_LAST_JOB_ID",
    "fi",
    "echo "Creating Amplify deployment..."",
    "aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name develop > amplify-deploy.json",
    "AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')",
    "AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')",
    "echo "Uploading deployment artifact..."",
    "curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file build.zip",
    "echo "Starting Amplify deployment..."",
    "aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_JOB_ID",
    "while :; do",
    "  sleep 10",
    "  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')",
    "  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then",
    "    break",
    "  fi",
    "  echo "Deployment status: $STATUS"",
    "done",
    "rm -f amplify-last-job.json amplify-deploy.json",
    "echo "Amplify deployment completed with status: $STATUS"",
    "if [ "$STATUS" != "SUCCEED" ]; then",
    "  echo "Deployment failed with status: $STATUS"",
    "  exit 1",
    "fi",
  ],
  "env": {
    "AWS_DEFAULT_REGION": "us-west-2",
    "AWS_REGION": "us-west-2",
  },
  "extensions": [],
  "needs": [],
}
`;

exports[`AmplifyDeployStep generates correct configuration with direct app ID 1`] = `
{
  "commands": [
    "export AWS_REGION="eu-central-1"",
    "export AWS_DEFAULT_REGION="eu-central-1"",
    "AMPLIFY_APP_ID="d123gtgt770s1x"",
    "echo "Checking for pending Amplify jobs..."",
    "aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name main --max-items 1 > amplify-last-job.json",
    "AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')",
    "AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')",
    "if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then",
    "  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_LAST_JOB_ID",
    "fi",
    "echo "Creating Amplify deployment..."",
    "aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name main > amplify-deploy.json",
    "AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')",
    "AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')",
    "echo "Uploading deployment artifact..."",
    "curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file dist.zip",
    "echo "Starting Amplify deployment..."",
    "aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID",
    "while :; do",
    "  sleep 10",
    "  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')",
    "  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then",
    "    break",
    "  fi",
    "  echo "Deployment status: $STATUS"",
    "done",
    "rm -f amplify-last-job.json amplify-deploy.json",
    "echo "Amplify deployment completed with status: $STATUS"",
    "if [ "$STATUS" != "SUCCEED" ]; then",
    "  echo "Deployment failed with status: $STATUS"",
    "  exit 1",
    "fi",
  ],
}
`;

exports[`AmplifyDeployStep generates correct configuration with direct app ID 2`] = `
{
  "env": {
    "AWS_DEFAULT_REGION": "eu-central-1",
    "AWS_REGION": "eu-central-1",
  },
  "needs": [],
  "steps": [
    {
      "name": "Set Amplify App ID",
      "run": "echo "AMPLIFY_APP_ID=d123gtgt770s1x" >> $GITHUB_ENV",
    },
    {
      "name": "Deploy to Amplify",
      "run": "#!/bin/bash -e
echo "Checking for pending Amplify jobs..."
aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name main --max-items 1 > amplify-last-job.json
AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')
AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')
if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then
  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_LAST_JOB_ID
fi
echo "Creating Amplify deployment..."
aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name main > amplify-deploy.json
AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')
AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')
echo "Uploading deployment artifact..."
curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file dist.zip
echo "Starting Amplify deployment..."
aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID
while :; do
  sleep 10
  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')
  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then
    break
  fi
  echo "Deployment status: $STATUS"
done
rm -f amplify-last-job.json amplify-deploy.json
echo "Amplify deployment completed with status: $STATUS"
if [ "$STATUS" != "SUCCEED" ]; then
  echo "Deployment failed with status: $STATUS"
  exit 1
fi",
    },
  ],
}
`;

exports[`AmplifyDeployStep generates correct configuration with direct app ID 3`] = `
{
  "commands": [
    "AMPLIFY_APP_ID="d123gtgt770s1x"",
    "echo "Checking for pending Amplify jobs..."",
    "aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name main --max-items 1 > amplify-last-job.json",
    "AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')",
    "AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')",
    "if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then",
    "  aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_LAST_JOB_ID",
    "fi",
    "echo "Creating Amplify deployment..."",
    "aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name main > amplify-deploy.json",
    "AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')",
    "AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')",
    "echo "Uploading deployment artifact..."",
    "curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file dist.zip",
    "echo "Starting Amplify deployment..."",
    "aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID",
    "while :; do",
    "  sleep 10",
    "  STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name main --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')",
    "  if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then",
    "    break",
    "  fi",
    "  echo "Deployment status: $STATUS"",
    "done",
    "rm -f amplify-last-job.json amplify-deploy.json",
    "echo "Amplify deployment completed with status: $STATUS"",
    "if [ "$STATUS" != "SUCCEED" ]; then",
    "  echo "Deployment failed with status: $STATUS"",
    "  exit 1",
    "fi",
  ],
  "env": {
    "AWS_DEFAULT_REGION": "eu-central-1",
    "AWS_REGION": "eu-central-1",
  },
  "extensions": [],
  "needs": [],
}
`;

exports[`AmplifyDeployStep integrates with CDK Pipeline using static app ID 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
  pull_request:
    branches:
      - main
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      pull-requests: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
        with:
          fetch-depth: 0
      - run: yarn install --check-files --frozen-lockfile
      - run: npx projen build
      - run: count-resources --cloud-assembly-dir cdk.out --warning-threshold 450 --resource-limit 500 --output-file resource-count-results.json --github-summary
      - name: Upload Artifact
        uses: actions/upload-artifact@v7
        with:
          name: cloud-assembly
          path: cdk.out/
      - name: Download baseline resource counts
        if: github.event_name == 'pull_request'
        uses: actions/checkout@v6
        with:
          ref: \${{ github.event.pull_request.base.ref }}
          path: __baseline
          sparse-checkout: resource-count-results.json
          sparse-checkout-cone-mode: false
      - name: Post PR comment with resource counts
        if: github.event_name == 'pull_request'
        uses: actions/github-script@v7
        with:
          script: |-
            const fs = require('fs');
            const resultsPath = 'resource-count-results.json';
            const baselinePath = '__baseline/resource-count-results.json';
            if (!fs.existsSync(resultsPath)) { console.log('No resource count results found'); return; }
            const results = JSON.parse(fs.readFileSync(resultsPath, 'utf8'));
            let baseline = null;
            try { if (fs.existsSync(baselinePath)) { baseline = JSON.parse(fs.readFileSync(baselinePath, 'utf8')); } } catch (e) { console.log('No baseline found'); }
            const baselineMap = {};
            if (baseline && baseline.stacks) { for (const s of baseline.stacks) { baselineMap[s.stackName] = s.resourceCount; } }
            let body = '## CloudFormation Resource Count\\n\\n';
            body += '| Stack | Resources | Limit | Usage | Delta | Status |\\n';
            body += '| --- | --- | --- | --- | --- | --- |\\n';
            for (const stack of results.stacks) {
              const prev = baselineMap[stack.stackName];
              const delta = prev !== undefined ? stack.resourceCount - prev : null;
              const deltaStr = delta !== null ? (delta > 0 ? \`+\${delta}\` : \`\${delta}\`) : 'N/A';
              const status = stack.exceeded ? '🔴 Exceeded' : stack.warning ? '🟡 Warning' : '🟢 OK';
              body += \`| \${stack.stackName} | \${stack.resourceCount} | \${stack.resourceLimit} | \${stack.percentUsed}% | \${deltaStr} | \${status} |\\n\`;
            }
            if (results.hasExceeded) { body += '\\n> **Error:** One or more stacks exceed the resource limit!\\n'; }
            else if (results.hasWarnings) { body += '\\n> **Warning:** One or more stacks are approaching the resource limit.\\n'; }
            const { data: comments } = await github.rest.issues.listComments({ owner: context.repo.owner, repo: context.repo.repo, issue_number: context.issue.number });
            const marker = '<!-- resource-count-comment -->';
            body = marker + '\\n' + body;
            const existing = comments.find(c => c.body && c.body.includes(marker));
            if (existing) { await github.rest.issues.updateComment({ owner: context.repo.owner, repo: context.repo.repo, comment_id: existing.id, body }); }
            else { await github.rest.issues.createComment({ owner: context.repo.owner, repo: context.repo.repo, issue_number: context.issue.number, body }); }
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    if: github.event_name != 'pull_request'
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v8
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: yarn install --check-files --frozen-lockfile
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-production:
    name: Deploy stage production to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-production
      cancel-in-progress: false
    env:
      CI: "true"
      AWS_REGION: ap-southeast-1
      AWS_DEFAULT_REGION: ap-southeast-1
    if: github.event_name != 'pull_request'
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
      - name: Download Artifact
        uses: actions/download-artifact@v8
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: yarn install --check-files --frozen-lockfile
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: ap-southeast-1
      - run: npx projen deploy:production
      - name: Set Amplify App ID
        run: echo "AMPLIFY_APP_ID=d123gtgt770s1x" >> $GITHUB_ENV
      - name: Deploy to Amplify
        run: |-
          #!/bin/bash -e
          echo "Checking for pending Amplify jobs..."
          aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name production --max-items 1 > amplify-last-job.json
          AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')
          AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')
          if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then
            aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name production --job-id $AMPLIFY_LAST_JOB_ID
          fi
          echo "Creating Amplify deployment..."
          aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name production > amplify-deploy.json
          AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')
          AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')
          echo "Uploading deployment artifact..."
          curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file dist.zip
          echo "Starting Amplify deployment..."
          aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name production --job-id $AMPLIFY_JOB_ID
          while :; do
            sleep 10
            STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name production --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')
            if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then
              break
            fi
            echo "Deployment status: $STATUS"
          done
          rm -f amplify-last-job.json amplify-deploy.json
          echo "Amplify deployment completed with status: $STATUS"
          if [ "$STATUS" != "SUCCEED" ]; then
            echo "Deployment failed with status: $STATUS"
            exit 1
          fi
      - name: Add CDK outputs to summary - production
        run: |-
          if [ -f "cdk-outputs-production.json" ]; then
            echo "## CDK Stack Outputs - production" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY

            # Check if the file has content
            if [ -s "cdk-outputs-production.json" ]; then
              # Parse JSON and create a markdown table
              echo "| Stack | Output Key | Output Value |" >> $GITHUB_STEP_SUMMARY
              echo "|-------|------------|--------------|" >> $GITHUB_STEP_SUMMARY

              # Use jq to parse the JSON and format as table rows
              jq -r 'to_entries | .[] | .key as $stack | .value | to_entries | .[] | "| \\($stack) | \\(.key) | \\(.value) |"' "cdk-outputs-production.json" >> $GITHUB_STEP_SUMMARY

              echo "" >> $GITHUB_STEP_SUMMARY
            else
              echo "No outputs found for this deployment." >> $GITHUB_STEP_SUMMARY
              echo "" >> $GITHUB_STEP_SUMMARY
            fi
          else
            echo "## CDK Stack Outputs - production" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY
            echo "Outputs file not found: cdk-outputs-production.json" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY
          fi
      - name: Upload Artifact
        uses: actions/upload-artifact@v7
        with:
          name: cdk-outputs-production
          path: cdk-outputs-production.json
"
`;

exports[`AmplifyDeployStep supports multiple Amplify deployments for different stages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
  pull_request:
    branches:
      - main
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      pull-requests: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
        with:
          fetch-depth: 0
      - run: yarn install --check-files --frozen-lockfile
      - run: npx projen build
      - run: count-resources --cloud-assembly-dir cdk.out --warning-threshold 450 --resource-limit 500 --output-file resource-count-results.json --github-summary
      - name: Upload Artifact
        uses: actions/upload-artifact@v7
        with:
          name: cloud-assembly
          path: cdk.out/
      - name: Download baseline resource counts
        if: github.event_name == 'pull_request'
        uses: actions/checkout@v6
        with:
          ref: \${{ github.event.pull_request.base.ref }}
          path: __baseline
          sparse-checkout: resource-count-results.json
          sparse-checkout-cone-mode: false
      - name: Post PR comment with resource counts
        if: github.event_name == 'pull_request'
        uses: actions/github-script@v7
        with:
          script: |-
            const fs = require('fs');
            const resultsPath = 'resource-count-results.json';
            const baselinePath = '__baseline/resource-count-results.json';
            if (!fs.existsSync(resultsPath)) { console.log('No resource count results found'); return; }
            const results = JSON.parse(fs.readFileSync(resultsPath, 'utf8'));
            let baseline = null;
            try { if (fs.existsSync(baselinePath)) { baseline = JSON.parse(fs.readFileSync(baselinePath, 'utf8')); } } catch (e) { console.log('No baseline found'); }
            const baselineMap = {};
            if (baseline && baseline.stacks) { for (const s of baseline.stacks) { baselineMap[s.stackName] = s.resourceCount; } }
            let body = '## CloudFormation Resource Count\\n\\n';
            body += '| Stack | Resources | Limit | Usage | Delta | Status |\\n';
            body += '| --- | --- | --- | --- | --- | --- |\\n';
            for (const stack of results.stacks) {
              const prev = baselineMap[stack.stackName];
              const delta = prev !== undefined ? stack.resourceCount - prev : null;
              const deltaStr = delta !== null ? (delta > 0 ? \`+\${delta}\` : \`\${delta}\`) : 'N/A';
              const status = stack.exceeded ? '🔴 Exceeded' : stack.warning ? '🟡 Warning' : '🟢 OK';
              body += \`| \${stack.stackName} | \${stack.resourceCount} | \${stack.resourceLimit} | \${stack.percentUsed}% | \${deltaStr} | \${status} |\\n\`;
            }
            if (results.hasExceeded) { body += '\\n> **Error:** One or more stacks exceed the resource limit!\\n'; }
            else if (results.hasWarnings) { body += '\\n> **Warning:** One or more stacks are approaching the resource limit.\\n'; }
            const { data: comments } = await github.rest.issues.listComments({ owner: context.repo.owner, repo: context.repo.repo, issue_number: context.issue.number });
            const marker = '<!-- resource-count-comment -->';
            body = marker + '\\n' + body;
            const existing = comments.find(c => c.body && c.body.includes(marker));
            if (existing) { await github.rest.issues.updateComment({ owner: context.repo.owner, repo: context.repo.repo, comment_id: existing.id, body }); }
            else { await github.rest.issues.createComment({ owner: context.repo.owner, repo: context.repo.repo, issue_number: context.issue.number, body }); }
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: write
    env:
      CI: "true"
    if: github.event_name != 'pull_request'
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v8
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: yarn install --check-files --frozen-lockfile
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
      - run: npx projen bump
      - run: npx projen release:push-assembly
  deploy-dev:
    name: Deploy stage dev to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-dev
      cancel-in-progress: false
    env:
      CI: "true"
      AWS_REGION: eu-central-1
      AWS_DEFAULT_REGION: eu-central-1
    if: github.event_name != 'pull_request'
    steps:
      - uses: actions/setup-node@v6
        with:
          node-version: "20"
          package-manager-cache: "false"
      - name: Checkout
        uses: actions/checkout@v6
      - name: Download Artifact
        uses: actions/download-artifact@v8
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: yarn install --check-files --frozen-lockfile
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:dev
      - name: Extract Amplify App ID
        env:
          ENVIRONMENT: dev
        run: AMPLIFY_APP_ID=$(jq -r '.DevStack.AmplifyAppId' cdk-outputs-dev.json) && echo "AMPLIFY_APP_ID=$AMPLIFY_APP_ID" >> $GITHUB_ENV
      - name: Deploy to Amplify
        run: |-
          #!/bin/bash -e
          echo "Checking for pending Amplify jobs..."
          aws amplify list-jobs --app-id $AMPLIFY_APP_ID --branch-name develop --max-items 1 > amplify-last-job.json
          AMPLIFY_LAST_JOB_STATUS=$(cat amplify-last-job.json | jq -r '.jobSummaries[].status')
          AMPLIFY_LAST_JOB_ID=$(cat amplify-last-job.json | jq -r '.jobSummaries[].jobId')
          if [ "$AMPLIFY_LAST_JOB_STATUS" = "PENDING" ]; then
            aws amplify stop-job --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_LAST_JOB_ID
          fi
          echo "Creating Amplify deployment..."
          aws amplify create-deployment --app-id $AMPLIFY_APP_ID --branch-name develop > amplify-deploy.json
          AMPLIFY_ZIP_UPLOAD_URL=$(cat amplify-deploy.json | jq -r '.zipUploadUrl')
          AMPLIFY_JOB_ID=$(cat amplify-deploy.json | jq -r '.jobId')
          echo "Uploading deployment artifact..."
          curl -H "Content-Type: application/zip" $AMPLIFY_ZIP_UPLOAD_URL --upload-file website-dev.zip
          echo "Starting Amplify deployment..."
          aws amplify start-deployment --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_JOB_ID
          while :; do
            sleep 10
            STATUS=$(aws amplify get-job --app-id $AMPLIFY_APP_ID --branch-name develop --job-id $AMPLIFY_JOB_ID | jq -r '.job.summary.status')
            if [ "$STATUS" != "PENDING" ] && [ "$STATUS" != "RUNNING" ]; then
              break
            fi
            echo "Deployment status: $STATUS"
          done
          rm -f amplify-last-job.json amplify-deploy.json
          echo "Amplify deployment completed with status: $STATUS"
          if [ "$STATUS" != "SUCCEED" ]; then
            echo "Deployment failed with status: $STATUS"
            exit 1
          fi
      - name: Add CDK outputs to summary - dev
        run: |-
          if [ -f "cdk-outputs-dev.json" ]; then
            echo "## CDK Stack Outputs - dev" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY

            # Check if the file has content
            if [ -s "cdk-outputs-dev.json" ]; then
              # Parse JSON and create a markdown table
              echo "| Stack | Output Key | Output Value |" >> $GITHUB_STEP_SUMMARY
              echo "|-------|------------|--------------|" >> $GITHUB_STEP_SUMMARY

              # Use jq to parse the JSON and format as table rows
              jq -r 'to_entries | .[] | .key as $stack | .value | to_entries | .[] | "| \\($stack) | \\(.key) | \\(.value) |"' "cdk-outputs-dev.json" >> $GITHUB_STEP_SUMMARY

              echo "" >> $GITHUB_STEP_SUMMARY
            else
              echo "No outputs found for this deployment." >> $GITHUB_STEP_SUMMARY
              echo "" >> $GITHUB_STEP_SUMMARY
            fi
          else
            echo "## CDK Stack Outputs - dev" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY
            echo "Outputs file not found: cdk-outputs-dev.json" >> $GITHUB_STEP_SUMMARY
            echo "" >> $GITHUB_STEP_SUMMARY
          fi
      - name: Upload Artifact
        uses: actions/upload-artifact@v7
        with:
          name: cdk-outputs-dev
          path: cdk-outputs-dev.json
"
`;
